# me433

HW12 – Servo/: CMakeLists.txt
HW12 – Servo/src/: servo.c
HW13 – IMU/: CMakeLists.txt  mouse.c
HW13 – IMU/IMU/: CMakeLists.txt
HW13 – IMU/src/: imu.c  main.c
HW14 – DSP/: python_csv.py
HW15 – CAD/: me433 bracket v1.SLDPRT  me433 bracket v1.STEP  me433 wheel v1.SLDPRT  me433 wheel v1.STEP
HW15 – CAD/Cura/: 4_brackets (1h6m).gcode
HW15 – CAD/Sliced/: 1_wheel (53m).bgcode  2_wheels (1h46mins).bgcode  3_wheels (2h39m).bgcode  4_brackets (1h6m).bgcode  4_wheels (3h31m).bgcode  8_brackets (2h4m).bgcode
HW16 – Motor Control (H Bridge)/: CMakeLists.txt
HW16 – Motor Control (H Bridge)/src/: h_bridge.c
HW2/: CMakeLists.txt  blink.c
HW2/blink/: blink.c
HW3/: CMakeLists.txt
HW3 – printf()/print/: CMakeLists.txt  print.c
HW3/cdc/: CMakeLists.txt
HW3/print/: print.c
HW4/: sine.c  tri.c
HW4 – spi/: CMakeLists.txt
HW4 – spi/spi/: bme280_spi.c
HW5/: CMakeLists.txt
HW5 – i2c/bmp280_i2c/: CMakeLists.txt
HW5/bmp280_i2c/: CMakeLists.txt  bmp280_i2c.c
HW6 – screen/: CMakeLists.txt
HW6 – screen/src/: main.c
HW7/: CMakeLists.txt
HW7 – UART/src/: ssd1306.h  uart_advanced.c
HW9 – UART + Zero/src/: font.h
HW9/src/: ssd1306.c  uart_advanced.c
Template (HW6)/src/: ssd1306.c
Template (HW9)/: CMakeLists.txt
Template (HW9)/src/: servo.c
